# slovo

./: Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
assets/styling/: echo.css  main.css  navbar.css
src/: main.rs  websocket.rs
src/api/: error.rs  mod.rs
src/components/: history.rs  input.rs  leaderboard.rs  mod.rs  word.rs  words.rs
src/server/: mod.rs
src/views/: game.rs  mod.rs  navbar.rs  settings.rs  websocket.rs
